--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,11 +5,10 @@
 		http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	version="3.1">
 
-	<display-name>Spring5-test</display-name>
+	<display-name>clubactivity</display-name>
 	<welcome-file-list>
 		<welcome-file>hello.jsp</welcome-file>
 	</welcome-file-list>
-
 
 	<servlet>
 		<servlet-name>dispatcher</servlet-name>
@@ -25,9 +24,9 @@
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>
-  			config.MemberConfig
+			config.ControllerConfig
   			config.MvcConfig
-  			config.ControllerConfig
+  			config.RootContextConfiguration
   		</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
